--- a/src/app/public/pages/home/home.component.html
+++ b/src/app/public/pages/home/home.component.html
@@ -1,1 +1,16 @@
-<p>home works!</p>
+<div class="my-container">
+    <h1>Mi agenda virtual</h1>
+    
+    <!-- Otro contenido de tu componente -->
+  
+    <!-- Texto si ya tienes una cuenta -->
+    <p *ngIf="!authService.isAuthenticatedUser()">
+      ¿Ya tienes una cuenta? <a (click)="navigateTo('/login')">Iniciar Sesión</a>
+    </p>
+  
+    <!-- Texto si ya tienes cuenta -->
+    <p *ngIf="authService.isAuthenticatedUser()">
+      Ya tienes cuenta, ¿quieres <a (click)="navigateTo('/signup')">registrarte</a> con una nueva cuenta?
+    </p>
+  </div>
+  
