--- a/src/app/public/pages/login/login.component.html
+++ b/src/app/public/pages/login/login.component.html
@@ -36,6 +36,10 @@
           La contraseña no es válida (mínimo 3 caracteres).
         </div>
       </div>
+      <div class="inputs">
+        <label for="name">Nombre</label>
+        <input type="text" name="name" id="name " placeholder="Ingrese su Nombre" >
+      </div>
   
       <div>
         <button class="btn-iniciar-sesion" type="submit" [disabled]="!form.valid">
