--- a/src/app/public/pages/contact/contact.component.html
+++ b/src/app/public/pages/contact/contact.component.html
@@ -1,1 +1,10 @@
-<p>contact works!</p>
+<div class="container">
+    <h1>Mis Contactos</h1>
+  
+    <ul>
+      <li *ngFor="let contact of contacts">
+        {{ contact.name }} - {{ contact.email }} <!-- Ajusta esto según la estructura de tus contactos -->
+      </li>
+    </ul>
+  </div>
+  
