add login and register conection

--- a/src/app/public/pages/login/login.component.html
+++ b/src/app/public/pages/login/login.component.html
@@ -1,51 +1,45 @@
 <div class="inicarsesion-header">
-    <h2>Mi agenda virtual</h2>
-  </div>
-  
-  <div class="container">
-    <form (ngSubmit)="login(form)" #form="ngForm">
-      <div class="inputs">
-        <label for="name">Nombre</label>
-        <input type="text" name="name" id="name " placeholder="Ingrese su Nombre" >
-      </div>
-      <div class="inputs">
-        <label for="email">Email</label>
-        <input
-          type="email"
-          name="email"
-          id="email"
-          autocomplete="email"
-          placeholder="Ingrese su email"
-          [(ngModel)]="authData.email"
-          #email="ngModel"
-        />
-      </div>
-      <div *ngIf="email.touched && email.errors">
-        El correo electrónico no es válido.
-      </div>
-  
-      <div class="inputs">
-        <label for="password">Contraseña</label>
-        <input
-          type="password"
-          name="password"
-          id="password"
-          autocomplete="current-password"
-          placeholder="Ingrese su contraseña"
-          [(ngModel)]="authData.password"
-          minlength="3"
-          #password="ngModel"
-        />
-        <div *ngIf="password.touched && password.errors">
-          La contraseña no es válida (mínimo 3 caracteres).
-        </div>
-      </div>
+  <h2>Mi agenda virtual</h2>
+</div>
 
-      <div>
-        <button class="btn-iniciar-sesion" type="submit" [disabled]="!form.valid">
-          Iniciar sesión
-        </button>
-      </div>
-    </form>
-  </div>
-  
+<div class="container">
+  <form (ngSubmit)="login(form)" #form="ngForm">
+    <!--al apretar submit se envia el elemento form -->
+    <div class="inputs">
+      <label for=" email">Email</label>
+      <input
+        type="email"
+        name="email"
+        id="email"
+        autocomplete="email"
+        placeholder="Ingrese su email"
+        [(ngModel)]="authData.email"
+        #email="ngModel"
+      />
+    </div>
+    <div *ngIf="email.touched && email.errors">
+      El correo electronico no es valido
+    </div>
+    <div class="inputs">
+      <label for="password">Contraseña</label>
+      <input
+        type="password"
+        name="password"
+        id="password"
+        autocomplete="current-password"
+        placeholder="Ingrese su contraseña"
+        [(ngModel)]="authData.password"
+        [minLength]="3"
+        #password="ngModel"
+      />
+    </div>
+    <div *ngIf="password.touched && password.errors">
+      La contraseña no es valida.
+    </div>
+    <div>
+      <button class="btn-iniciar-sesion" type="submit" [disabled]="!form.valid">
+        Iniciar sesion
+      </button>
+    </div>
+  </form>
+</div>
