--- a/src/app/public/pages/signup/signup.component.html
+++ b/src/app/public/pages/signup/signup.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h1 class="Registrarse-header">Mi agenda virtual</h1>
-    <form (ngSubmit)="registrarse(form)" #form="ngForm" class="Registrarse-Form">
+    <form (ngSubmit)="register(form)" #form="ngForm" class="Registrarse-Form">
       <div class="inputs">
         <label for="Nombre">Nombre</label>
         <input
