--- a/src/app/public/pages/contact/contact.component.html
+++ b/src/app/public/pages/contact/contact.component.html
@@ -1,8 +1,30 @@
 <!-- contact.component.html -->
-<div class="contacts">
-  <div class="h1">
-    <h1>Contactos</h1>
-  </div>
 
+<div *ngIf="contactos.length > 0; else noContacts">
+  <h2>Mis Contactos</h2>
+  <ul>
+    <li *ngFor="let contacto of contactos">
+      <div class="contact">
+        <h3>Contacto {{ contacto.id }}</h3>
+        <ul>
+          <li><strong>Nombre:</strong> {{ contacto.name }}</li>
+          <li><strong>Apellido:</strong> {{ contacto.lastName }}</li>
+          <li><strong>Descripción:</strong> {{ contacto?.description }}</li>
+          <li><strong>Email:</strong> {{ contacto.email }}</li>
+          <li><strong>Número de celular:</strong> {{ contacto.celularNumber }}</li>
+          <li><strong>Número de teléfono:</strong> {{ contacto.telephoneNumber }}</li>
+          <li><strong>Ubicación:</strong> {{ contacto.location.description }}</li>
+          <!-- Agrega más propiedades según sea necesario -->
+        </ul>
+      </div>
+    </li>
+  </ul>
+</div>
 
+<ng-template #noContacts>
+  <p>No hay contactos disponibles.</p>
+</ng-template>
+
+<button (click)="logOut()">Cerrar sesión</button>
+<button (click)="agregarContacto()">Agregar Nuevo Contacto</button>
 
