--- a/src/app/public/pages/contact-details/contact-details.component.scss
+++ b/src/app/public/pages/contact-details/contact-details.component.scss
@@ -32,7 +32,7 @@ div {
     margin-bottom: 12px;
     border: 1px solid #ccc;
     border-radius: 4px;
-    box-sizing: border-box; /* Evitar que el borde añada al ancho/altura total */
+    box-sizing: border-box;
   }
 
   button {
@@ -63,23 +63,47 @@ div {
       width: auto;
     }
   }
-}
 
-.modal-background {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-}
+  .toastify {
+    font-family: 'Arial', sans-serif;
+    font-size: 16px;
+    padding: 16px;
+    border-radius: 8px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    color: #fff;
+    max-width: 300px;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 
-.modal {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: white;
-  padding: 20px;
-}
+  .toastify.toastify-success {
+    background-color: #28a745;
+  }
 
+  .toastify.toastify-error {
+    background-color: #dc3545;
+  }
+
+  .modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+
+    p {
+      margin-bottom: 10px;
+    }
+
+    button {
+      margin-right: 10px;
+    }
+  }
+}
