--- a/src/app/public/pages/contact/contact.component.scss
+++ b/src/app/public/pages/contact/contact.component.scss
@@ -1,54 +1,60 @@
-// contact.component.scss
+/* contacto.component.scss */
 
-// Estilos generales del componente
-div.contact {
-  border: 1px solid #ccc;
-  padding: 10px;
-  margin-bottom: 10px;
+.contact-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 20px;
+}
+
+.contact {
+  background-color: #ffffff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  margin: 10px;
+  padding: 20px;
+  width: 300px;
+  text-align: center;
+  transition: transform 0.3s ease-in-out;
+
+  &:hover {
+    transform: scale(1.05);
+  }
 
   h3 {
-    color: #333;
-  }
-
-  ul {
-    list-style-type: none;
-    padding: 0;
-
-    li {
-      margin-bottom: 5px;
-
-      strong {
-        margin-right: 5px;
-      }
-    }
+    margin: 8px 0;
+    font-size: 1.4em;
+    font-weight: bold;
+    color: #3498db;
   }
 }
 
-// Estilos para el enlace que envuelve el contacto
-a {
-  text-decoration: none;
-  color: #007bff;
+.no-contacts-message {
+  color: #e74c3c;
+  font-weight: bold;
+}
+
+.logout-button,
+.add-contact-button {
+  margin-top: 20px;
+  margin-right: 10px; /* Espacio entre los botones */
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
   cursor: pointer;
-
-  &:hover {
-    text-decoration: underline;
-  }
 }
 
-// Estilos para los botones
-button {
-  margin-top: 10px;
-  padding: 8px 16px;
-  font-size: 14px;
-  cursor: pointer;
-
-  &:hover {
-    background-color: #007bff;
-    color: #fff;
-  }
+.logout-button {
+  background-color: #e74c3c; /* Rojo para el botón de cerrar sesión */
+  color: #fff;
 }
 
-// Estilos para el mensaje cuando no hay contactos disponibles
-p {
-  color: #999;
+.add-contact-button {
+  background-color: #3498db;
+  color: #fff;
+}
+
+.logout-button:hover,
+.add-contact-button:hover {
+  background-color: #2c3e50;
 }
