--- a/src/app/public/components/add-contact/add-contact.component.html
+++ b/src/app/public/components/add-contact/add-contact.component.html
@@ -6,7 +6,7 @@
     <label for="apellido">Apellido:</label>
     <input type="text" id="apellido" [(ngModel)]="nuevoContacto.lastName" name="apellido" required>
   
-    <label for="descripcion">Descripción Usuario:</label>
+    <label for="descripcion">Descripción Contacto:</label>
     <input type="text" id="descripcion" [(ngModel)]="nuevoContacto.description" name="descripcion" required>
   
     <label for="email">Email:</label>
